# coolts

./: LICENSE  README.md  pyproject.toml
.github/workflows/: myworkflow.yml
src/coolts/: coolmodel.py
