[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coolts"
version = "0.0.2"
authors = [  { name="Thach Le Nguyen", email="thach.lenguyen@ucd.ie" },]
description = "A cool time series package"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/lnthach/coolts"
"Bug Tracker" = "https://github.com/lnthach/coolts/issues"

